--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+  }
 body {
 	box-sizing: border-box;
 	font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
